# joom

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  TASK.md  justfile  main.py  notebook.ipynb  playground.ipynb  pyproject.toml
.cursor/rules/: 00-base.md  01-agent-behavior.md  02-architecture.md  03-code-review.md  04-coding-style.md  05-testing.md  06-process.md  07-anti-patterns.md  08-intellectual-discipline.md
notebooks/: dpx_shutdown_analysis.ipynb
notes/: dpx_shutdown_report.md  end-to-end-process.md  end-to-end.md  task.md
