[project]
name = "joom"
version = "0.1.0"
description = "A small task completed using Joom marketplace data"
license = {text = "MIT"}
authors = [
    {name = "Kirill Stepanovskikh", email = "kir.sth@yandex.ru"},
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "orjson>=3.11.5",
    "pandas>=3.0.0",
]
